package api;
syntax = "proto3";

message Credentials {
  message Aws {
    string accessKeyId = 1;
    string secretAccessKey = 2;
    string sessionToken = 3;
    string expiration = 4;
  }
  message S3Post {
    string AWSAccessKeyId = 1;
    string policy = 2;
    string signature = 3;
    string acl = 4;
  }
  Aws aws = 1;
  S3Post s3Post = 2;
  string bucket = 3;
  string region = 4;
}

message SecretboxRecord {
  bytes encryptedData = 1;
  uint32 counter = 2;
  bytes nonceRandom = 3;
}

message SyncRecord {
  enum Action {
    CREATE = 0;
    UPDATE = 1;
    DELETE = 2;
  }
  message Site {
    string location = 1;
    string title = 2;
    string customTitle = 3;
    uint64 lastAccessedTime = 4;
    uint64 creationTime = 5;
    string favicon = 6;
  }
  message Bookmark {
    Site site = 1;
    bool isFolder = 2;
    bytes parentFolderObjectId = 3;
    bytes previousObjectId = 4; // unused
    bytes nextObjectId = 5; // unused
    repeated string fields = 6;
    bool hideInToolbar = 7;
  }
  message SiteSetting {
    string hostPattern = 1;
    float zoomLevel = 2;
    bool shieldsUp = 3;
    enum AdControl {
      SHOW_BRAVE_ADS = 0;
      BLOCK_ADS = 1;
      ALLOW_ADS_AND_TRACKING = 2;
    }
    enum CookieControl {
      BLOCK_THIRD_PARTY_COOKIE = 0;
      ALLOW_ALL_COOKIES = 1;
      BLOCK_ALL_COOKIES = 2;
    }
    AdControl adControl = 4;
    CookieControl cookieControl = 5;
    bool noScript = 7;
    bool httpsEverywhere = 8;
    bool fingerprintingProtection = 9;
    bool ledgerPayments = 10;
    bool ledgerPaymentsShown = 11;
    repeated string fields = 12;
  }
  message Device {
    string name = 1;
  }
  Action action = 1;
  bytes deviceId = 2;
  bytes objectId = 3;
  oneof objectData {
    Bookmark bookmark = 4;
    Site historySite = 5;
    SiteSetting siteSetting = 6;
    Device device = 7;
  }
}
